# unofficial-3dp-miner

./: Http.cpp  Http.h  README.md  buffer_geometry.cu  buffer_geometry.h  build.sh  grid_cuda.cuh  int128.cpp  json.h  kernel.cuh  main.cpp  math_utils.h  narray.h  rock.h  scrape.cu  settings.h  sha256_simd.cpp  sha3.h  sha3_gpu.cu  simple_deque.cu  simple_deque.h  timer.h  uint128_t_build.h  uint256_t.h  uint256_t_build.h
.github/workflows/: main.yaml
src/: CMakeLists.txt  cuda_helpers.h  grid.cpp  grid.h  grid_cuda.cu  int128.h  json.cpp  kernel.cu  main.cpp  main.h  math_utils.cu  narray.cu  perlin.cu  perlin.h  scrape.h  sha256.cu  sha256.h  sha256_simd.h  sha3.cpp  sha3_gpu.cuh  simple_deque_type.cu  sphere.cu  sphere.h  uint128_t.cpp  uint128_t.h  uint256_t.cpp  utils.cpp  utils.h
